--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <center><h1>My Resume</h1></center>
     <ul>
-        <center><img src = "drive-download-20240727T112054Z-001/IMG_1842.jpg" width="200"></center>
+        <center><img src = "./IMG_1842.jpg" width="200"></center>
     </ul>
     <hr>
     <ul>
@@ -25,10 +25,10 @@
         <li><h4>My personal bests are 11.44 seconds for the 100 meters and 23.6 seconds for the 200 meters.</h4></li>
         <li><h4>Education : Material Science Engineering ( National Yang Ming Chiao Tung University )</h4></li>
         <li><h4>Work Experience : I am the host of an Airbnb in Kuala Selangor, Selangor, Malaysia.</h4></li>
-        <li><h4>Awards : </h4></li><img src = "drive-download-20240727T112054Z-001/IMG_1411.jpg" width = 150>
+        <li><h4>Awards : </h4></li><img src = "./IMG_1411.jpg" width = 150>
 
     </ul>
-    <a href = "./contact.html">Contact Me</a>
+    <center><a href = "./contact.html">Contact me</a><center>
     <footer>
         &copy; 2024 Tan Yi.All right reserved.
     </footer>
